# t

./: .gitignore  README.md
docs/: docs.md  index.md
src/: CMakeLists.txt  Makefile  codegen.cpp  codegen.h  error.cpp  error.h  lexer.cpp  lexer.h  main.cpp  nodes.h  parser.cpp  parser.h  passes.cpp  passes.h  symbols.h  test.c  test.ll  test.t  test.txt  test2.t  type.cpp  type.h
src/corefn/: CMakeLists.txt  corefn.cpp  corefn.h
std/: io.t  math.t  string.t
